@@ -7,7 +7,7 @@ import static org.openmetadata.csv.CsvUtil.addTagLabels;
 import static org.openmetadata.schema.type.EventType.ENTITY_DELETED;
 import static org.openmetadata.schema.type.EventType.LOGICAL_TEST_CASE_ADDED;
 import static org.openmetadata.schema.type.Include.ALL;
-import static org.openmetadata.service.Entity.FIELD_ENTITY_STATUS;
+import static org.openmetadata.schema.type.Include.NON_DELETED;
 import static org.openmetadata.service.Entity.FIELD_OWNERS;
 import static org.openmetadata.service.Entity.FIELD_REVIEWERS;
 import static org.openmetadata.service.Entity.FIELD_TAGS;
@@ -23,8 +23,6 @@ import static org.openmetadata.service.Entity.getEntityTimeSeriesRepository;
 import static org.openmetadata.service.Entity.populateEntityFieldTags;
 import static org.openmetadata.service.exception.CatalogExceptionMessage.entityNotFound;
 import static org.openmetadata.service.exception.CatalogExceptionMessage.notReviewer;
-import static org.openmetadata.service.governance.workflows.Workflow.RESULT_VARIABLE;
-import static org.openmetadata.service.governance.workflows.Workflow.UPDATED_BY_VARIABLE;
 import static org.openmetadata.service.security.mask.PIIMasker.maskSampleData;
 
 import com.google.gson.Gson;
@@ -49,6 +47,8 @@ import org.apache.commons.csv.CSVRecord;
 import org.apache.commons.lang3.tuple.Pair;
 import org.jdbi.v3.sqlobject.transaction.Transaction;
 import org.jetbrains.annotations.NotNull;
+import org.openmetadata.csv.CsvExportProgressCallback;
+import org.openmetadata.csv.CsvImportProgressCallback;
 import org.openmetadata.csv.EntityCsv;
 import org.openmetadata.schema.EntityInterface;
 import org.openmetadata.schema.EntityTimeSeriesInterface;
@@ -93,14 +93,13 @@ import org.openmetadata.schema.utils.EntityInterfaceUtil;
 import org.openmetadata.schema.utils.JsonUtils;
 import org.openmetadata.service.Entity;
 import org.openmetadata.service.exception.EntityNotFoundException;
-import org.openmetadata.service.governance.workflows.WorkflowHandler;
 import org.openmetadata.service.resources.dqtests.TestCaseResource;
 import org.openmetadata.service.resources.dqtests.TestSuiteMapper;
 import org.openmetadata.service.resources.feeds.MessageParser;
 import org.openmetadata.service.resources.feeds.MessageParser.EntityLink;
+import org.openmetadata.service.resources.tags.TagLabelUtil;
 import org.openmetadata.service.search.SearchListFilter;
 import org.openmetadata.service.security.AuthorizationException;
-import org.openmetadata.service.util.EntityFieldUtils;
 import org.openmetadata.service.util.EntityUtil;
 import org.openmetadata.service.util.EntityUtil.Fields;
 import org.openmetadata.service.util.EntityUtil.RelationIncludes;
@@ -113,11 +112,13 @@ public class TestCaseRepository extends EntityRepository<TestCase> {
   private static final String TEST_SUITE_FIELD = "testSuite";
   private static final String INCIDENTS_FIELD = "incidentId";
   private static final String UPDATE_FIELDS =
-      "owners,entityLink,testSuite,testSuites,testDefinition,dimensionColumns";
+      "owners,entityLink,testSuite,testSuites,testDefinition,dimensionColumns,topDimensions";
   private static final String PATCH_FIELDS =
-      "owners,entityLink,testSuite,testSuites,testDefinition,computePassedFailedRowCount,useDynamicAssertion,dimensionColumns";
+      "owners,entityLink,testSuite,testSuites,testDefinition,computePassedFailedRowCount,useDynamicAssertion,dimensionColumns,topDimensions";
   public static final String FAILED_ROWS_SAMPLE_EXTENSION = "testCase.failedRowsSample";
-  private final ExecutorService asyncExecutor = Executors.newFixedThreadPool(1);
+  private final ExecutorService asyncExecutor =
+      Executors.newFixedThreadPool(
+          1, java.lang.Thread.ofPlatform().name("om-test-case-async").factory());
 
   public TestCaseRepository() {
     super(
@@ -423,16 +424,51 @@ public class TestCaseRepository extends EntityRepository<TestCase> {
           testCase.getTags() != null ? new ArrayList<>(testCase.getTags()) : new ArrayList<>();
       List<TagLabel> tableTags =
           table.getTags() != null ? new ArrayList<>(table.getTags()) : new ArrayList<>();
-      EntityUtil.mergeTags(testCaseTags, tableTags);
+      EntityUtil.mergeTags(testCaseTags, filterMutuallyExclusiveConflicts(testCaseTags, tableTags));
       if (entityLink.getFieldName() != null && entityLink.getFieldName().equals("columns")) {
-        // if we have a column test case inherit the columns tags as well
         table.getColumns().stream()
             .filter(column -> column.getName().equals(entityLink.getArrayFieldName()))
             .findFirst()
-            .ifPresent(column -> EntityUtil.mergeTags(testCaseTags, column.getTags()));
+            .ifPresent(
+                column ->
+                    EntityUtil.mergeTags(
+                        testCaseTags,
+                        filterMutuallyExclusiveConflicts(testCaseTags, column.getTags())));
       }
       testCase.setTags(testCaseTags);
     }
+  }
+
+  /**
+   * Filter out incoming tags that conflict with mutually exclusive tags already present. The test
+   * case's own tags take precedence over inherited table/column tags.
+   */
+  private List<TagLabel> filterMutuallyExclusiveConflicts(
+      List<TagLabel> existingTags, List<TagLabel> incomingTags) {
+    if (nullOrEmpty(incomingTags) || nullOrEmpty(existingTags)) {
+      return incomingTags != null ? incomingTags : new ArrayList<>();
+    }
+    Set<String> existingExclusiveParents =
+        existingTags.stream()
+            .filter(
+                tag -> {
+                  try {
+                    return TagLabelUtil.mutuallyExclusive(tag);
+                  } catch (Exception e) {
+                    return false;
+                  }
+                })
+            .map(tag -> FullyQualifiedName.getParentFQN(tag.getTagFQN()))
+            .collect(Collectors.toSet());
+    if (existingExclusiveParents.isEmpty()) {
+      return incomingTags;
+    }
+    return incomingTags.stream()
+        .filter(
+            tag ->
+                !existingExclusiveParents.contains(
+                    FullyQualifiedName.getParentFQN(tag.getTagFQN())))
+        .toList();
   }
 
   @Override
@@ -710,6 +746,14 @@ public class TestCaseRepository extends EntityRepository<TestCase> {
   }
 
   @Override
+  protected void clearEntitySpecificRelationshipsForMany(List<TestCase> entities) {
+    if (entities.isEmpty()) return;
+    List<UUID> ids = entities.stream().map(TestCase::getId).toList();
+    deleteToMany(ids, Entity.TEST_CASE, Relationship.CONTAINS, Entity.TEST_SUITE);
+    deleteToMany(ids, Entity.TEST_CASE, Relationship.CONTAINS, Entity.TEST_DEFINITION);
+  }
+
+  @Override
   public void storeRelationships(TestCase test) {
     EntityLink entityLink = EntityLink.parse(test.getEntityLink());
     EntityUtil.validateEntityLink(entityLink);
@@ -918,21 +962,6 @@ public class TestCaseRepository extends EntityRepository<TestCase> {
       return new TestCaseRepository.TestCaseFailureResolutionTaskWorkflow(threadContext);
     }
 
-    // Handle description tasks
-    if (EntityUtil.isDescriptionTask(taskType)) {
-      return new DescriptionTaskWorkflow(threadContext);
-    }
-
-    // Handle tag tasks
-    if (EntityUtil.isTagTask(taskType)) {
-      return new TagTaskWorkflow(threadContext);
-    }
-
-    // Handle approval tasks (RequestApproval, etc.)
-    if (EntityUtil.isApprovalTask(taskType)) {
-      return new ApprovalTaskWorkflow(threadContext);
-    }
-
     return super.getTaskWorkflow(threadContext);
   }
 
@@ -1104,53 +1133,9 @@ public class TestCaseRepository extends EntityRepository<TestCase> {
     }
   }
 
-  public static class ApprovalTaskWorkflow extends FeedRepository.TaskWorkflow {
-    ApprovalTaskWorkflow(FeedRepository.ThreadContext threadContext) {
-      super(threadContext);
-    }
-
-    @Override
-    public EntityInterface performTask(String user, ResolveTask resolveTask) {
-      TestCase testCase = (TestCase) threadContext.getAboutEntity();
-      checkUpdatedByReviewer(testCase, user);
-
-      UUID taskId = threadContext.getThread().getId();
-      Map<String, Object> variables = new HashMap<>();
-      variables.put(RESULT_VARIABLE, resolveTask.getNewValue().equalsIgnoreCase("approved"));
-      variables.put(UPDATED_BY_VARIABLE, user);
-      WorkflowHandler workflowHandler = WorkflowHandler.getInstance();
-      boolean workflowSuccess =
-          workflowHandler.resolveTask(
-              taskId, workflowHandler.transformToNodeVariables(taskId, variables));
-
-      // If workflow failed (corrupted Flowable task), apply the status directly
-      if (!workflowSuccess) {
-        LOG.warn(
-            "[GlossaryTerm] Workflow failed for taskId='{}', applying status directly", taskId);
-        Boolean approved = (Boolean) variables.get(RESULT_VARIABLE);
-        String entityStatus = (approved != null && approved) ? "Approved" : "Rejected";
-        EntityFieldUtils.setEntityField(
-            testCase, TEST_CASE, user, FIELD_ENTITY_STATUS, entityStatus, true);
-      }
-
-      return testCase;
-    }
-  }
-
   public class TestUpdater extends EntityUpdater {
     public TestUpdater(TestCase original, TestCase updated, Operation operation) {
       super(original, updated, operation);
-    }
-
-    @Override
-    public void updateReviewers() {
-      super.updateReviewers();
-      // adding the reviewer should add the person as assignee to the task
-      if (original.getReviewers() != null
-          && updated.getReviewers() != null
-          && !original.getReviewers().equals(updated.getReviewers())) {
-        updateTaskWithNewReviewers(updated);
-      }
     }
 
     @Override
@@ -1203,6 +1188,7 @@ public class TestCaseRepository extends EntityRepository<TestCase> {
           updated.getUseDynamicAssertion());
       recordChange(
           "dimensionColumns", original.getDimensionColumns(), updated.getDimensionColumns());
+      recordChange("topDimensions", original.getTopDimensions(), updated.getTopDimensions());
       recordChange("testCaseStatus", original.getTestCaseStatus(), updated.getTestCaseStatus());
       recordChange("testCaseResult", original.getTestCaseResult(), updated.getTestCaseResult());
     }
@@ -1343,14 +1329,6 @@ public class TestCaseRepository extends EntityRepository<TestCase> {
     }
   }
 
-  @Override
-  protected void preDelete(TestCase entity, String deletedBy) {
-    // A test case in `IN_REVIEW` state can only be deleted by the reviewers
-    if (EntityStatus.IN_REVIEW.equals(entity.getEntityStatus())) {
-      checkUpdatedByReviewer(entity, deletedBy);
-    }
-  }
-
   private void closeApprovalTask(TestCase entity, String comment) {
     MessageParser.EntityLink about =
         new MessageParser.EntityLink(TEST_CASE, entity.getFullyQualifiedName());
@@ -1434,8 +1412,15 @@ public class TestCaseRepository extends EntityRepository<TestCase> {
 
   @Override
   public String exportToCsv(String name, String user, boolean recursive) throws IOException {
+    return exportToCsv(name, user, recursive, null);
+  }
+
+  @Override
+  public String exportToCsv(
+      String name, String user, boolean recursive, CsvExportProgressCallback callback)
+      throws IOException {
     List<TestCase> testCases = getTestCasesForExport(name, recursive);
-    return new TestCaseCsv(user, null).exportCsv(testCases);
+    return new TestCaseCsv(user, null).exportCsv(testCases, callback);
   }
 
   @Override
@@ -1453,7 +1438,37 @@ public class TestCaseRepository extends EntityRepository<TestCase> {
       boolean dryRun,
       String user,
       boolean recursive,
+      CsvImportProgressCallback callback)
+      throws IOException {
+    // if we end up here it means we are importing test cases from the obs page
+    return new TestCaseCsv(user, null).importCsv(csv, dryRun);
+  }
+
+  @Override
+  public CsvImportResult importFromCsv(
+      String name,
+      String csv,
+      boolean dryRun,
+      String user,
+      boolean recursive,
       String targetEntityType)
+      throws IOException {
+    TestSuite targetBundleSuite =
+        TEST_SUITE.equals(targetEntityType)
+            ? Entity.getEntityByName(TEST_SUITE, name, "", Include.ALL)
+            : null;
+    return new TestCaseCsv(user, targetBundleSuite).importCsv(csv, dryRun);
+  }
+
+  @Override
+  public CsvImportResult importFromCsv(
+      String name,
+      String csv,
+      boolean dryRun,
+      String user,
+      boolean recursive,
+      String targetEntityType,
+      CsvImportProgressCallback callback)
       throws IOException {
     TestSuite targetBundleSuite =
         TEST_SUITE.equals(targetEntityType)
@@ -1514,6 +1529,9 @@ public class TestCaseRepository extends EntityRepository<TestCase> {
     public static final List<CsvHeader> HEADERS = DOCUMENTATION.getHeaders();
     private final TestSuite targetBundleSuite;
     private final List<UUID> importedTestCaseIds = new ArrayList<>();
+    private final Map<String, UUID> importedTestSuiteIds = new HashMap<>();
+    private final EntityRepository<EntityInterface> versioningRepo =
+        (EntityRepository<EntityInterface>) Entity.getEntityRepository(TEST_SUITE);
 
     TestCaseCsv(String user, TestSuite targetBundleSuite) {
       super(TEST_CASE, HEADERS, user);
@@ -1593,6 +1611,8 @@ public class TestCaseRepository extends EntityRepository<TestCase> {
               TestSuite testSuite =
                   Entity.getEntityByName(TEST_SUITE, testSuiteFqn, "", Include.NON_DELETED);
               testCase.withTestSuite(testSuite.getEntityReference());
+              importedTestSuiteIds.putIfAbsent(
+                  testSuite.getFullyQualifiedName(), testSuite.getId());
             } catch (EntityNotFoundException e) {
               importFailure(
                   printer, String.format("Test suite '%s' not found", testSuiteFqn), csvRecord);
@@ -1603,6 +1623,7 @@ public class TestCaseRepository extends EntityRepository<TestCase> {
             // No test suite provided - get or create the default basic test suite
             EntityReference testSuite = repository.getOrCreateTestSuite(testCase);
             testCase.withTestSuite(testSuite);
+            importedTestSuiteIds.putIfAbsent(testSuite.getFullyQualifiedName(), testSuite.getId());
           }
 
           // Compute and set FQN manually (same logic as setFullyQualifiedName)
@@ -1671,6 +1692,30 @@ public class TestCaseRepository extends EntityRepository<TestCase> {
                       + "The test cases exist and can be manually added to the Bundle Suite.",
                   importedTestCaseIds.size(), targetBundleSuite.getName(), e.getMessage()),
               e);
+        }
+      }
+
+      if (!importResult.getDryRun()
+          && importResult.getStatus() != ApiStatus.ABORTED
+          && importResult.getNumberOfRowsProcessed() > 1) {
+        List<UUID> affectedTestSuiteIds = new ArrayList<>(importedTestSuiteIds.values());
+        for (UUID affectedTestSuiteId : affectedTestSuiteIds) {
+          try {
+            versioningRepo.createChangeEventForBulkOperation(
+                versioningRepo.get(
+                    null,
+                    affectedTestSuiteId,
+                    new Fields(versioningRepo.getAllowedFields(), ""),
+                    NON_DELETED,
+                    false),
+                importResult,
+                importedBy);
+          } catch (Exception e) {
+            LOG.error(
+                "Failed to update version for Test Suite with id '{}': {}",
+                affectedTestSuiteId,
+                e.getMessage());
+          }
         }
       }
     }
@@ -1783,10 +1828,7 @@ public class TestCaseRepository extends EntityRepository<TestCase> {
       if (nullOrEmpty(parameterValues)) {
         return "";
       }
-
-      return parameterValues.stream()
-          .map(pv -> JsonUtils.pojoToJson(pv))
-          .collect(Collectors.joining(";"));
+      return parameterValues.stream().map(JsonUtils::pojoToJson).collect(Collectors.joining(";"));
     }
 
     private List<TestCaseParameterValue> parseParameterValues(String parameterValuesStr) {
@@ -1794,18 +1836,12 @@ public class TestCaseRepository extends EntityRepository<TestCase> {
         return new ArrayList<>();
       }
 
-      String[] parts = parameterValuesStr.split(";");
-      List<TestCaseParameterValue> parameterValues = new ArrayList<>();
+      String normalized = RestUtil.normalizeQuotes(parameterValuesStr.trim());
+      List<String> jsonObjects = RestUtil.extractJsonObjects(normalized);
 
-      for (String part : parts) {
-        if (!nullOrEmpty(part.trim())) {
-          TestCaseParameterValue pv =
-              JsonUtils.readValue(part.trim(), TestCaseParameterValue.class);
-          parameterValues.add(pv);
-        }
-      }
-
-      return parameterValues;
+      return jsonObjects.stream()
+          .map(json -> JsonUtils.readValue(json, TestCaseParameterValue.class))
+          .collect(Collectors.toList());
     }
   }
 }
